--- a/css/responsive.css
+++ b/css/responsive.css
@@ -6,8 +6,9 @@
 	#home button { margin-top: 15px; }
 	h2 { font-size: 25px; }
 	h3 { font-size: 16px; }
+	h5 { line-height: 27px; }
 	p { font-size: 16px; }
-	.contact-link { font-size: 14px; font-family: 'Industry-Regular'; letter-spacing: 1px; }
+	.contact-link { font-size: 14px; font-family: 'Industry-Black'; letter-spacing: 1px; }
 	.details { font-size: 13px; }
 	#map { height: 50vh; }
 	.venue-box { text-align: center; padding: 30px 15px !important; }
