--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,7 +9,7 @@
 	h5 { line-height: 27px; }
 	p { font-size: 16px; }
 	.contact-link { font-size: 14px; font-family: 'Industry-Black'; letter-spacing: 1px; }
-	.network-link img { width: 30px; }
+	.social-media-link img { width: 30px; }
 	.details { font-size: 13px; }
 	#map { height: 50vh; }
 	.venue-box { text-align: center; padding: 30px 15px !important; }
