--- a/css/responsive.css
+++ b/css/responsive.css
@@ -3,7 +3,9 @@
 @media (max-width: 600px) { /*Para monitores small*/
 	.valign-wrapper {height: auto!important;}
 	section { padding: 30px 15px; }
+	#principal {height: auto;}
 	#home button { margin-top: 15px; }
+	#home img { width: 105px; }
 	h2 { font-size: 25px; }
 	h3 { font-size: 16px; }
 	h5 { line-height: 27px; }
