--- a/css/style.css
+++ b/css/style.css
@@ -222,6 +222,7 @@ nav a {
 }
 #sponsor-decentraland img {
   width: 72%;
+  margin-top: 23px;
 }
 #sponsor-0x img {
   width: 33%;
@@ -247,14 +248,15 @@ nav a {
 }
 #sponsor-status img {
   margin-top: 30px;
-  width: 53%;
+  width: 51%;
 }
 #sponsor-lendroid img {
   width: 53%;
   margin-top: 40px;
 }
 #sponsor-windingtree img {
-  margin-top: 15px;
+  margin-top: 21px;
+  width: 55%;
 }
 #sponsor-blueyard img {
   width: 25%;
@@ -265,6 +267,10 @@ nav a {
 #sponsor-toshi img {
   width: 51%;
   margin-top: 18px;
+}
+#sponsor-blockgeeks img {
+  width: 67%;
+  margin-top: 24px;
 }
 
 /*CONTACT*/
