--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ nav a {
 }
 
 /*SPEAKERS*/
-#speakers {
+#speakers-and-judges {
   background-color: #f6f6f6;
   padding-top: 40px;
   padding-bottom: 10px;
