--- a/css/style.css
+++ b/css/style.css
@@ -260,24 +260,15 @@ nav a {
   width: 72%;
   margin-top: 23px;
 }
-#sponsor-0x img {
-  width: 33%;
-}
 #sponsor-golem img {
   width: 46%;
-}
-#sponsor-cosmos img {
-  width: 56%;
-  margin-top: 26px;
-}
-#sponsor-storj img {
-  width: 53%;
 }
 #sponsor-aragon img {
   margin-top: 13px;
 }
 #sponsor-gnosis img {
-  margin-top: 30px;
+  width: 44%;
+  margin-top: 4px;
 }
 #sponsor-status img {
   width: 51%;
@@ -289,12 +280,6 @@ nav a {
 #sponsor-windingtree img {
   margin-top: 21px;
   width: 55%;
-}
-#sponsor-blueyard img {
-  width: 25%;
-}
-#sponsor-placeholder img {
-  margin-top: 43px;
 }
 #sponsor-toshi img {
   width: 51%;
@@ -318,9 +303,15 @@ nav a {
   width: 43%;
   margin-top: 25px;
 }
-#sponsor-levelk img {
-  width: 27%;
+#sponsor-1kx img {
+  width: 26%;
+  margin-top: 28px;
 }
+#sponsor-quiknode img {
+  width: 20%;
+  margin-top: 20px;
+}
+
 /*PARTNERS*/
 .partners-title {
   margin-top: 130px;
