adding marker to sponsors and removing useless images

--- a/css/style.css
+++ b/css/style.css
@@ -299,9 +299,9 @@ nav a {
   width: 31%;
   margin-top: 29px;
 }
-#sponsor-xivis img {
-  width: 43%;
-  margin-top: 25px;
+#sponsor-marker img {
+  width: 37%;
+  margin-top: 0px;
 }
 #sponsor-1kx img {
   width: 26%;
