fix on sponsor name

--- a/css/style.css
+++ b/css/style.css
@@ -299,7 +299,7 @@ nav a {
   width: 31%;
   margin-top: 29px;
 }
-#sponsor-marker img {
+#sponsor-maker img {
   width: 37%;
   margin-top: 0px;
 }
