--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,10 @@ nav a {
   width: 20%;
   margin-top: 20px;
 }
+#sponsor-poex img {
+  width: 24%;
+  margin-top: 6px;
+}
 
 /*PARTNERS*/
 .partners-title {
