--- a/css/style.css
+++ b/css/style.css
@@ -309,6 +309,18 @@ nav a {
 }
 #sponsor-acamica img {
   width: 50%;
+  margin-top: 30px; 
+}
+#sponsor-livepeer img {
+  width: 47%;
+  margin-top: 28px;
+}
+#sponsor-district0x img {
+  width: 65%;
+  margin-top: 9px;
+}
+#sponsor-zk img {
+  width: 24%;
 }
 #sponsor-maker img {
   width: 37%;
