new speakers and sposors

--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,10 @@ nav a {
   width: 24%;
   margin-top: 10px;
 }
+#sponsor-ledger img {
+  width: 47%;
+  margin-top: 33px;
+}
 #sponsor-maker img {
   width: 37%;
   margin-top: 0px;
