--- a/css/schedule.css
+++ b/css/schedule.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+#principal-schedule {
+  background: linear-gradient(to bottom right, #4E3DF5 , #6832A2);
+  height: auto;
+  color: white;
+  padding: 0;
+  margin: 0;
+}
+#principal-schedule h2{
+  color: white !important;
+}
 .timeline-section {
   display: flex;
   align-items: center;
@@ -55,18 +65,19 @@
 .entry .title:before {
   content: '';
   position: absolute;
-  width: 15px;
-  height: 15px;
+  width: 18px;
+  height: 18px;
   border: 4px solid #6414FF;
   background-color: #fff;
   border-radius: 100%;
   top: 15%;
-  right: -8px;
+  right: -9px;
   z-index: 99;
 }
 .entry .title h3 {
   margin: 0;
-  font-size: 120%;
+  font-family: 'Univers-Roman';
+  font-size: 14px;
 }
 .entry .title p {
   margin: 0;
@@ -80,6 +91,7 @@
 }
 .entry .body p {
   line-height: 1.4em;
+  margin-bottom: 5px;
 }
 .entry .body p:first-child {
   margin-top: 0;
