--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ nav a {
   line-height: 20px;
 }
 
-.speakers-subtitle {
+.speakers-subtitle, .subtitle {
   margin-top: 5px;
   font-family: 'Univers-Light';
   color: #484848;
