change on speakers and adding a sponsor

--- a/css/style.css
+++ b/css/style.css
@@ -310,6 +310,10 @@ nav a {
   width: 28%;
   margin-top: 26px;
 }
+#sponsor-consensys img {
+  width: 54%;
+  margin-top: 25px;
+}
 #sponsor-acamica img {
   width: 50%;
   margin-top: 30px; 
