--- a/css/style.css
+++ b/css/style.css
@@ -330,6 +330,10 @@ nav a {
   width: 24%;
   margin-top: 10px;
 }
+#sponsor-coefficient img {
+  width: 24%;
+  margin-top: 10px;
+}
 #sponsor-ledger img {
   width: 47%;
   margin-top: 33px;
